--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,9 @@
+html, body {margin: 0}
 body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
     z-index: 10;
 }
-
-body.hide {
-  overflow: hidden;
-}
-
-
 
 h1,
 h2,
@@ -17,6 +12,24 @@ h4,
 h5,
 h6 {
     font-family: "Open Sans", sans-serif;
+}
+
+.container {
+  max-width: 1500px;
+}
+
+/*
+* Extra utilities
+*/
+
+.flex-equal>* {
+  flex: 1;
+}
+
+@media (min-width: 768px) {
+  .flex-md-equal>* {
+      flex: 1;
+  }
 }
 
 
@@ -95,7 +108,7 @@ border-radius: 50%;
 #header {
     position: sticky;
     transition: all 0.5s;
-    z-index: 20;
+    z-index: 950;
     padding: 15px 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     font-family: "Open Sans", sans-serif;
@@ -433,25 +446,43 @@ border-radius: 50%;
 
 /*Sobre*/
 
-.sobre p{
-  font-size: 16px;
-    text-indent: 0;
-    text-align: justify;
-}
+
 .sobre .seção-titulo{
-    
-        
-        margin: 15px 0 0 0;
-        font-size: 28px;
-        font-weight: 700;
+  font-size: 28px;
+  font-weight: 700;
+  padding: 30px 0px;
+     
 }
+.sobre  .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  flex: 0 0 auto;
+  margin: 0% 10%;
+}
+@media (max-width: 1200px) {
+  .sobre  .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
+}
+
+
+
 .sobre .seção-titulo h1{
     color: rgb(255 0 18);
     
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
+.sobre p{
+  font-size: 16px;
+    text-indent: 0;
+    text-align: justify;
+}
 
 .sobre p span {
     color: rgb(255 0 18);
@@ -643,17 +674,29 @@ svg.bi.bi-search {
 
 .participe{
   background-color: #fec20e;
- 
-  padding: 35px 0px;
 }
 
 .participe .seção-titulo{
-  
-      font-size: 28px;
-      font-weight: 700;
-      padding-bottom: 5px;
-      flex: 0 0 auto;
-    width: 83.33333333%;
+  font-size: 28px;
+  font-weight: 700;
+  padding: 30px 0px;
+     
+}
+.participe  .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  flex: 0 0 auto;
+  margin: 0% 10%;
+}
+@media (max-width: 1200px) {
+  .participe  .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
 }
 .participe .seção-titulo h1 {
   /*color:rgb(255 0 18);*/
@@ -998,7 +1041,7 @@ padding: 10px 0;
 
   background: url('../img/fei_vi/fundo-bra.svg') , #ec441c;
   background-size: 100% auto;
-  padding-bottom: 35px;
+ 
  
 }
 
@@ -1006,26 +1049,44 @@ padding: 10px 0;
       background-color: #ec441c;;
       font-size: 28px;
       font-weight: 700;
-      padding-top: 35px;
-      padding-bottom: 5px;
-      flex: 0 0 auto;
-    width: 83.33333333%;
+      padding: 30px 0px;
+         
 }
-.fei_ali .seção-titulo h1 {
-  /*color:rgb(255 0 18);*/
-  color: white;
+.fei_ali .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+    flex: 0 0 auto;
+    width: 80%;
+    margin: 0% 10%;
 }
 
-.fei_ali .seção-titulo h2 {
+
+@media (max-width: 1200px) {
+  .fei_ali .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
+}
+.fei_ali .seção-titulo .texto h1 {
+  /*color:rgb(255 0 18);*/
+
+  color: white;
+  
+}
+
+.fei_ali .seção-titulo .texto  h2 {
   /*color:rgb(255 0 18);*/
   color: white;
   
 }
-.fei_ali .seção-titulo strong{
+.fei_ali .seção-titulo .texto  strong{
 font-style: italic;
 text-decoration: underline;
 }
-.fei_ali .seção-titulo p{
+.fei_ali .seção-titulo .texto  p{
   
   font-size: 17px;
   
@@ -1156,16 +1217,34 @@ border-radius: 5px;
 /*apoie*/
 .apoie{
   background-color: #01a3b8;
-  padding: 35px 0px;
+
 }
 .apoie .container-fluid{
-  background: url('../img/fei_vi/fundo-bra.svg') , #01a3b8;
+  background: url('../img/apoie/apoie.svg') , #01a3b8;
   background-size: 100% auto;
 }
 .apoie .seção-titulo{
+  padding: 30px 0px;
   background-color: #01a3b8;
       font-size: 28px;
       font-weight: 700;
+}
+
+.apoie .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  flex: 0 0 auto;
+  margin: 0% 10%;
+}
+@media (max-width: 1200px) {
+  .apoie .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
 }
 
 .apoie .seção-titulo h1 {
@@ -1318,12 +1397,27 @@ color: #01a3b8;
 
 .edi-ant .seção-titulo{
   
-  padding-top: 30px;
+  padding: 30px 0px;
     color: #fff;
     font-size: 28px;
     font-weight: 700;
 }
-
+.edi-ant .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  flex: 0 0 auto;
+  margin: 0% 10%;
+}
+@media (max-width: 1200px) {
+  .edi-ant .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
+}
 .edi-ant a{
   text-decoration: none;
   color: none;
@@ -1456,12 +1550,36 @@ color: #01a3b8;
 /*Contato agentamento*/
 .contato_agd {
   background-color: #01a3b8;
-    padding: 35px 0px;
+    
+}
+
+.contato_agd .container-fluid{
+  background: url('../img/apoie/apoie.svg') , #01a3b8;
+  background-size: 100% auto;
+
 }
 .contato_agd .seção-titulo{
-        margin: 15px 0 0 0;
-        font-size: 28px;
-        font-weight: 700;
+  padding: 30px 0px;
+  background-color: #01a3b8;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.contato_agd .seção-titulo .texto{
+  justify-content: center;
+  text-align: center;
+  width: 80%;
+  flex: 0 0 auto;
+  margin: 0% 10%;
+}
+@media (max-width: 1200px) {
+  .contato_agd .seção-titulo .texto{
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    flex: 0 0 auto;
+    margin: 0% 0%;
+  }
 }
 
 
@@ -1711,94 +1829,6 @@ border-radius: 15px;
   }
 }
 
-
-
-
-
-/**/
-
-/*seção equipe*/
-
-.seção .col-lg-4 {
-    margin-bottom: 1.5rem;
-    text-align: center;
-}
-
-/* rtl:begin:ignore */
-.seção .col-lg-4 p {
-    margin-right: .75rem;
-    margin-left: .75rem;
-}
-
-.seção-titulo {
-    text-align: center;
-    padding-bottom: 30px;
-}
-.seção-titulo h3 {
-    margin: 15px 0 0 0;
-    font-size: 28px;
-    font-weight: 700;
-}
-
-.seção-titulo h3 span{
-    color: rgb(255 0 18);
-}
-
-/*fim*/
-
-/*inicio divisoria*/
-.margin-div {
-    margin: 5rem 0;
-
-}
-
-.apos-div {
-    letter-spacing: -.05rem;
-}
-
-@media (min-width: 40em) {
-
-    /* Bump up size of carousel content 
-    .carousel-caption p 
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
-    }*/
-
-    .featurette-heading {
-        font-size: 50px;
-    }
-}
-
-@media (min-width: 62em) {
-    .featurette-heading {
-        margin-top: 7rem;
-    }
-}
-
-/*fim divisoria*/
-
-
-
-
-.container {
-    max-width: 1500px;
-}
-
-/*
- * Extra utilities
- */
-
-.flex-equal>* {
-    flex: 1;
-}
-
-@media (min-width: 768px) {
-    .flex-md-equal>* {
-        flex: 1;
-    }
-}
-
 #footer {
     background: linear-gradient(rgba(12, 13, 14, 0.8), rgba(12, 13, 14, 0.8));
     
@@ -1808,6 +1838,7 @@ border-radius: 15px;
     font-size: 1rem;
     ;
 }
+
 
 #footer .logo_footer {
     margin-bottom: 10px;
@@ -1821,7 +1852,19 @@ border-radius: 15px;
 
 }
 
-#footer .copyright {
+#footer a {
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
+  text-decoration: none;
+}
+#footer a:hover {
+  color: #01a3b8;
+  transition: 0.3s;
+}
+
+#footer .instituição {
     text-align: center;
     padding-top: 30px;
 }
