--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,7 @@ border-radius: 50%;
 
 .carousel-caption {
     position: absolute;
+    width: 45%;
     right: 55%; 
     bottom: 25%;
     left: 15%;
@@ -386,7 +387,27 @@ border-radius: 50%;
   font-size: 2.5rem;
 }
 
-@media screen and (max-width: 1202px) {
+@media screen and (max-width: 1500px) {
+  .banner {
+      width: 100%;
+      padding: 10px 0px 0px 0px;
+  }
+
+  .banner h3 {
+      color: #fff;
+      font-size: 18px;
+      font-weight: 700;
+      margin-bottom: 0px;
+  }
+
+  .banner .card-body {
+      padding: 10px 0px 0px 0px;
+  }
+  .carousel-caption   h1{
+    font-size: 2.25rem;
+  }
+}
+@media screen and (max-width: 1350px) {
     .banner {
         width: 100%;
         padding: 10px 0px 0px 0px;
@@ -405,29 +426,69 @@ border-radius: 50%;
     .carousel-caption   h1{
       font-size: 2rem;
     }
+    .carousel-caption   a{
+      font-size: 1rem;
+    }
+}
+@media screen and (max-width: 1300px) {
+ 
+  .carousel-caption   h1{
+    font-size: 1.75rem;
+  }
+  .carousel-caption   a{
+    font-size: 0.95rem;
+  }
+}
+@media screen and (max-width: 1190px) {
+ 
+  .carousel-caption   h1{
+    font-size: 1.65rem;
+  }
+ 
+}
+@media screen and (max-width: 1060px) {
+ 
+  .carousel-caption{
+    bottom: 10%;
+  }
+ 
 }
 @media screen and (max-width: 990px) {
   
   .carousel-caption   h1{
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 }
-@media screen and (max-width: 890px) {
-  
+
+
+@media screen and (max-width: 900px) {
+  .carousel-caption {
+    bottom: 5%;
+  }
   .carousel-caption   h1{
     font-size: 1.5rem;
   }
+  
 }
 @media screen and (max-width: 750px) {
   
   .carousel-caption   h1{
     font-size: 1rem;
   }
+  .carousel-caption   a{
+    font-size: 0.65rem;
+  }
 }
 @media screen and (max-width: 590px) {
   
   .carousel-caption   h1{
     display: none;
+  }
+  .carousel-caption   p{
+    display: none;
+  }
+  .carousel-caption   a{
+  pointer-events: none;
   }
 }
 
